fix(about): adjust letter spacing

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background: linear-gradient(0deg, #F8F8F8 59.29%, #FFFFFF 84.77%);
 }
 
 code {
@@ -55,4 +57,8 @@ code {
 .curve-radius {
   border-bottom-left-radius: 50%;
   border-bottom-right-radius: 50%;
+}
+
+p {
+  letter-spacing: 0.025em;
 }
